--- a/phase1_data_extraction/.env
+++ b/phase1_data_extraction/.env
@@ -1,5 +1,5 @@
 
-NEWS_API_KEY= '30ea43ca1a824fcca0c715f74294e5a3' 
-MONGO_URI= 'mongodb+srv://ferchiimen02:Financial_news_123@financial-data.psgdvah.mongodb.net/?retryWrites=true&w=majority&appName=financial-data'  
-DATABASE_NAME=sentiment_project
-COLLECTION_NAME=financial_news
+NEWS_API_KEY= '40d3542bd3f944678fdf9a2efbcc69b2' 
+MONGODB_URI=mongodb+srv://ferchiimen02:Financial_news_123@financial-data.psgdvah.mongodb.net/?retryWrites=true&w=majority&appName=financial-data
+MONGO_DB_NAME=fear_index_db
+DEFAULT_DELAY_HOURS=12
