--- a/phase1_data_extraction/.env
+++ b/phase1_data_extraction/.env
@@ -1,5 +1,5 @@
 
-NEWS_API_KEY= '40d3542bd3f944678fdf9a2efbcc69b2' #Use your own API
-MONGODB_URI=mongodb+srv://ferchiimen02:Financial_news_123@financial-data.psgdvah.mongodb.net/?retryWrites=true&w=majority&appName=financial-data #Use your own MONGODB URI
+NEWS_API_KEY= "40d3542bd3f944678fdf9a2efbcc69b2"
+MONGODB_URI=mongodb+srv://ferchiimen02:Financial_news_123@financial-data.psgdvah.mongodb.net/?retryWrites=true&w=majority&appName=financial-data 
 MONGO_DB_NAME=fear_index_db
 DEFAULT_DELAY_HOURS=12
